testdata/error/complex_posting.ledger
; Posting with complex amount.

2024/09/01 Shop
    Expenses                                     (123.45 CHF + 1 USD)
    Assets:Banks
